ES|QL deserves a new hash table
We've been using `LongHash` and `LongLongHash` which are open addressed,
linear probing hash tables that grow in place. They have served us well,
but we need to add features to them to support all of ES|QL. It turns out
that there've been a lot of advances in the hash space in the ten years
since we wrote these hash tables! And they weren't the most "advanced"
thing back then. This PR creates a new hash table implementation the
borrows significantly from google's Swiss Tables. It's 25% to 49% faster
in microbenchmarks:

```
 unique   longHash          ordinator64
      5   7.470 ± 0.033 ->   4.158 ± 0.037 ns/op 45% faster
   1000   9.657 ± 0.375 ->   4.907 ± 0.036 ns/op 49% faster
  10000  15.505 ± 0.051 ->  11.609 ± 0.062 ns/op 25% faster
 100000  20.948 ± 0.112 ->  13.413 ± 0.764 ns/op 35% fsater
1000000  48.507 ± 0.586 ->  36.306 ± 0.296 ns/op 25% faster
```

This also integrates the new table into ES|QL's grouping functions,
though imperfectly at the moment.